@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 5;
+use Test::More tests => 8;
 
 use Test::Deep;
 
@@ -14,11 +14,12 @@ my $geocode = new_ok 'Geo::Coder::GeocodeFarm' => [key => 'Your GeocodeFarm key'
 
 can_ok $geocode, qw(reverse_geocode);
 
-my $result = $geocode->reverse_geocode(latlng => '45.2040305,-93.3995728');
+{
+    my $result = $geocode->reverse_geocode(latlng => '45.2040305,-93.3995728');
 
-isa_ok $result, 'HASH';
+    isa_ok $result, 'HASH';
 
-cmp_deeply $result, {
+    cmp_deeply $result, {
         "STATUS" => {
             "copyright_notice" => "Results Copyright (c) 2013 GeocodeFarm. All Rights Reserved. No unauthorized redistribution without written consent from GeocodeFarm's Owners and Operators.",
             "copyright_logo" => "http://www.geocodefarm.com/assets/img/logo.png",
@@ -34,13 +35,42 @@ cmp_deeply $result, {
             "accuracy" => "GOOD ACCURACY"
         },
         "COORDINATES" => {
-            "latitude" => "45.204031",
-            "longitude" => "-93.399573"
+            "latitude" => "45.2040305",
+            "longitude" => "-93.3995728"
         }
-}, '$result matches deeply';
+    }, '$result matches deeply';
 
-is $ua->{url}, 'http://www.geocodefarm.com/api/reverse/json/Your%20GeocodeFarm%20key/45.204031/-93.399573', 'url matches';
+    is $ua->{url}, 'http://www.geocodefarm.com/api/reverse/json/Your%20GeocodeFarm%20key/45.2040305/-93.3995728', 'url matches';
+}
 
+{
+    my $result = $geocode->reverse_geocode(lat => 45.2040305, lng => -93.3995728);
+
+    isa_ok $result, 'HASH';
+
+    cmp_deeply $result, {
+        "STATUS" => {
+            "copyright_notice" => "Results Copyright (c) 2013 GeocodeFarm. All Rights Reserved. No unauthorized redistribution without written consent from GeocodeFarm's Owners and Operators.",
+            "copyright_logo" => "http://www.geocodefarm.com/assets/img/logo.png",
+            "access" => "KEY_VALID, ACCESS_GRANTED",
+            "status" => "SUCCESS"
+        },
+        "PROVIDER" => {
+            "provider" => "LOCAL FARM",
+            "import" => "ALREADY STORED"
+        },
+        "ADDRESS" => {
+            "address" => "500-534 West Main Street, Anoka, MN 55303, USA",
+            "accuracy" => "GOOD ACCURACY"
+        },
+        "COORDINATES" => {
+            "latitude" => "45.2040305",
+            "longitude" => "-93.3995728"
+        }
+    }, '$result matches deeply';
+
+    is $ua->{url}, 'http://www.geocodefarm.com/api/reverse/json/Your%20GeocodeFarm%20key/45.2040305/-93.3995728', 'url matches';
+}
 
 package My::Mock;
 
@@ -88,8 +118,8 @@ sub decoded_content {
             "accuracy": "GOOD ACCURACY"
         },
         "COORDINATES": {
-            "latitude": "45.204031",
-            "longitude": "-93.399573"
+            "latitude": "45.2040305",
+            "longitude": "-93.3995728"
         }
     }
 }
